--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -12,3 +12,4 @@ lwk_common = "0.2.0"
 lwk_signer = "0.2.0"
 lwk_wollet = "0.2.0"
 thiserror = "1.0.57"
+tokio = { version = "1.36.0", features = ["full"] }
