--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.80"
+env_logger = "0.11"
 log = "0.4.20"
 breez-sdk-liquid = { path = "../lib" }
 tokio = { version = "1.36.0", features = ["full"] }
