--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -18,3 +18,11 @@ lwk_signer = "0.2.0"
 lwk_wollet = "0.2.0"
 thiserror = "1.0.57"
 tokio = { version = "1.36.0", features = ["full"] }
+rusqlite = { version = "0.29", features = [
+    "serde_json",
+    "bundled",
+    "load_extension",
+    "backup",
+    "hooks",
+] }
+rusqlite_migration = "1.0"
