--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,4 +15,4 @@ log = "0.4.20"
 lwk_signer = "0.2.0"
 lwk_common = "0.2.0"
 rustyline = { version = "13.0.0", features = ["derive"] }
-tokio = { version = "1.36.0", features = ["full"] }
+tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
