--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -25,4 +25,4 @@ rusqlite = { version = "0.29", features = [
 ] }
 rusqlite_migration = "1.0"
 thiserror = "1.0.57"
-tokio = { version = "1.36.0", features = ["full"] }
+tokio = "1.36.0"
