--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -15,13 +15,7 @@ log = "0.4.20"
 lwk_common = "0.2.0"
 lwk_signer = "0.2.0"
 lwk_wollet = "0.2.0"
-rusqlite = { version = "0.29", features = [
-    "serde_json",
-    "bundled",
-    "load_extension",
-    "backup",
-    "hooks",
-] }
+rusqlite = "0.29"
 rusqlite_migration = "1.0"
 thiserror = "1.0.57"
 tokio = "1.36.0"
