--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -11,18 +11,11 @@ crate-type = ["staticlib", "cdylib", "lib"]
 anyhow = "1.0.80"
 bip39 = { version = "2.0.0", features = ["serde"] }
 boltz-client = "0.1.2"
-lightning-invoice = "0.29.0"
 log = "0.4.20"
 lwk_common = "0.2.0"
 lwk_signer = "0.2.0"
 lwk_wollet = "0.2.0"
-thiserror = "1.0.57"
-tokio = { version = "1.36.0", features = ["full"] }
-rusqlite = { version = "0.29", features = [
-    "serde_json",
-    "bundled",
-    "load_extension",
-    "backup",
-    "hooks",
-] }
+rusqlite = "0.29"
 rusqlite_migration = "1.0"
+thiserror = "1.0.57"
+tokio = "1.36.0"
