--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "breez-sdk-liquid-cli"
+name = "ls-sdk-cli"
 edition = "2021"
 version = "0.0.1"
 
@@ -8,9 +8,9 @@ version = "0.0.1"
 [dependencies]
 anyhow = "1.0.80"
 bip39 = "2.0.0"
-breez-sdk-liquid = { path = "../lib" }
 clap = { version = "4.5.1", features = ["derive"] }
 env_logger = "0.11"
+ls-sdk = { path = "../lib" }
 log = "0.4.20"
 qr2term = "0.3.1"
 rustyline = { version = "13.0.0", features = ["derive"] }
