Add uniffi package

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+    "ls-sdk-bindings",
     "ls-sdk-core",
 ]
 resolver = "2"
@@ -8,5 +9,10 @@ resolver = "2"
 version = "0.0.1"
 
 [workspace.dependencies]
+anyhow = "1.0"
+thiserror = "1.0"
 uniffi = "0.25.3"
 uniffi_macros = "0.25.3"
+
+[patch.crates-io]
+secp256k1-zkp = {git = "https://github.com/BlockstreamResearch/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d"}
