--- a/lib/ls-sdk-core/Cargo.toml
+++ b/lib/ls-sdk-core/Cargo.toml
@@ -5,16 +5,20 @@ version.workspace = true
 
 [lib]
 name = "ls_sdk"
-crate-type = ["staticlib", "cdylib", "lib"]
 
 [dependencies]
-anyhow = "1.0.80"
+anyhow = { workspace = true }
 bip39 = { version = "2.0.0", features = ["serde"] }
-boltz-client = "0.1.2"
+boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "e55b8439f3311be7fcd18ec14a5747d0f3dbd74f" }
 log = "0.4.20"
-lwk_common = "0.2.0"
-lwk_signer = "0.2.0"
-lwk_wollet = "0.2.0"
+lwk_common = "0.3.0"
+lwk_signer = "0.3.0"
+lwk_wollet = "0.3.0"
 rusqlite = "0.29"
 rusqlite_migration = "1.0"
-thiserror = "1.0.57"
+serde = { version = "1.0.197", features = ["derive"] }
+thiserror = { workspace = true }
+
+[dev-dependencies]
+tempdir = "0.3.7"
+uuid = { version = "1.8.0", features = ["v4"] }
