--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,7 +10,9 @@ crate-type = ["staticlib", "cdylib", "lib"]
 [dependencies]
 anyhow = "1.0.80"
 bip39 = { version = "2.0.0", features = ["serde"] }
-boltz-client = "0.1.2"
+#boltz-client = "0.1.2"
+#boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "61592bcf0ad2e9bd68c593bc87c5a487805b6d00" }
+boltz-client = { git = "https://github.com/ok300/boltz-rust", branch = "ok300-expose-error" }
 log = "0.4.20"
 lwk_common = "0.3.0"
 lwk_signer = "0.3.0"
@@ -18,3 +20,6 @@ lwk_wollet = "0.3.0"
 rusqlite = "0.29"
 rusqlite_migration = "1.0"
 thiserror = "1.0.57"
+
+[patch.crates-io]
+secp256k1-zkp = {git = "https://github.com/BlockstreamResearch/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d"}
