--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,9 +10,7 @@ crate-type = ["staticlib", "cdylib", "lib"]
 [dependencies]
 anyhow = "1.0.80"
 bip39 = { version = "2.0.0", features = ["serde"] }
-#boltz-client = "0.1.2"
-#boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "61592bcf0ad2e9bd68c593bc87c5a487805b6d00" }
-boltz-client = { git = "https://github.com/hydra-yse/boltz-rust", branch = "yse-breez-latest" }
+boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "e55b8439f3311be7fcd18ec14a5747d0f3dbd74f" }
 log = "0.4.20"
 lwk_common = "0.3.0"
 lwk_signer = "0.3.0"
