--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4.20"
 lwk_common = "0.3.0"
 lwk_signer = "0.3.0"
 lwk_wollet = "0.3.0"
-rusqlite = { version = "0.29", features = ["backup"] }
+rusqlite = "0.29"
 rusqlite_migration = "1.0"
 serde = { version = "1.0.197", features = ["derive"] }
 thiserror = "1.0.57"
