feat: add qr code to receive command

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,6 +12,7 @@ breez-sdk-liquid = { path = "../lib" }
 clap = { version = "4.5.1", features = ["derive"] }
 env_logger = "0.11"
 log = "0.4.20"
+qr2term = "0.3.1"
 rustyline = { version = "13.0.0", features = ["derive"] }
 
 [patch.crates-io]
