--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,6 +14,8 @@ env_logger = "0.11"
 log = "0.4.20"
 qr2term = "0.3.1"
 rustyline = { version = "13.0.0", features = ["derive"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
 
 [patch.crates-io]
 secp256k1-zkp = {git = "https://github.com/BlockstreamResearch/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d"}
