--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,3 +1,10 @@
+[profile.release]
+lto = true
+opt-level = "z"
+codegen-units = 1
+panic = "abort"
+rpath = true
+
 [workspace]
 members = [
     "ls-sdk-bindings",
