--- a/lib/ls-sdk-bindings/makefile
+++ b/lib/ls-sdk-bindings/makefile
@@ -111,3 +111,7 @@ bindings-swift: ios-universal darwin-universal
 python: $(SOURCES)
 	cargo build --release --target $(TARGET)
 	cargo run --features=uniffi/cli --bin uniffi-bindgen generate src/ls_sdk.udl --no-format --language python -o ffi/python
+
+## React Native
+react-native:
+	make -C bindings-react-native codegen
