--- a/lib/ls-sdk-core/Cargo.toml
+++ b/lib/ls-sdk-core/Cargo.toml
@@ -9,7 +9,9 @@ name = "ls_sdk"
 [dependencies]
 anyhow = { workspace = true }
 bip39 = { version = "2.0.0", features = ["serde"] }
-boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "cf2544ae126ac46ab2118313d61a57f160e3d64e" }
+#boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "cf2544ae126ac46ab2118313d61a57f160e3d64e" }
+# Temp workaround until https://github.com/SatoshiPortal/boltz-rust/pull/41 is reviewed and merged
+boltz-client = { git = "https://github.com/ok300/boltz-rust", branch = "ok300-fix-swapstatus-close_notify-errors" }
 log = "0.4.20"
 lwk_common = "0.3.0"
 lwk_signer = "0.3.0"
