CI: build bindings, add binding tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,26 @@ jobs:
           cargo clippy -- -D warnings
           cd ../cli
           cargo clippy -- -D warnings
+
+  build-bindings:
+    name: Test ls-sdk-bindings
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Build ls-sdk-bindings
+        working-directory: lib/ls-sdk-bindings
+        run: cargo build
+
+      - name: Setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Run ls-sdk-bindings tests
+        run: |
+          curl -o jna-5.12.1.jar https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.12.1/jna-5.12.1.jar
+          export CLASSPATH=$(pwd)/jna-5.12.1.jar;
+          cd lib/ls-sdk-bindings
+          cargo test
