Add suitable crate-types are configured for target devices
- lib is required for non-library targets, such as tests and benchmarks
- staticlib is required for iOS
- cdylib for all other platforms

--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -5,6 +5,7 @@ version.workspace = true
 
 [lib]
 name = "breez_liquid_sdk"
+crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
 anyhow = { workspace = true }
