--- a/lib/ls-sdk-bindings/Cargo.toml
+++ b/lib/ls-sdk-bindings/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ls-sdk-bindings"
+name = "breez-liquid-sdk-bindings"
 edition = "2021"
 version.workspace = true
 
@@ -8,13 +8,13 @@ name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
 
 [lib]
-name = "ls_sdk_bindings"
+name = "breez_liquid_sdk_bindings"
 crate-type = ["staticlib", "cdylib", "lib"]
 
 
 [dependencies]
 anyhow = { workspace = true }
-ls-sdk = { path = "../ls-sdk-core" }
+breez-liquid-sdk = { path = "../ls-sdk-core" }
 uniffi = { workspace = true, features = [ "bindgen-tests", "cli" ] }
 thiserror = { workspace = true }
 
