--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["lib", "cdylib", "staticlib"]
 [dependencies]
 anyhow = { workspace = true }
 bip39 = { version = "2.0.0", features = ["serde"] }
-boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "6f45fff8b87c7530c847eb05f018906c48785a6c" }
+boltz-client = { git = "https://github.com/hydra-yse/boltz-rust", rev = "410d3a95e528fce36c02e8d414d5b647a31cc28f" }
 flutter_rust_bridge = { version = "=2.0.0-dev.33", features = ["chrono"], optional = true }
 log = "0.4.20"
 lwk_common = "0.3.0"
@@ -21,6 +21,8 @@ rusqlite_migration = "1.0"
 serde = { version = "1.0.197", features = ["derive"] }
 thiserror = { workspace = true }
 openssl = { version = "0.10", features = ["vendored"] }
+# TODO Remove once fully migrated to v2 API
+elements = "0.24.1"
 
 [dev-dependencies]
 tempdir = "0.3.7"
