--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -23,6 +23,6 @@ dev_dependencies:
   test: ^1.25.4
 dependencies:
   ffi: ^2.1.2
-  flutter_rust_bridge: ">=2.0.0-dev.0 <=2.0.0-dev.33"
+  flutter_rust_bridge: 2.0.0-dev.33
   freezed_annotation: ^2.4.1
   meta: ^1.11.0
