--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -7,8 +7,8 @@ rpath = true
 
 [workspace]
 members = [
-    "ls-sdk-bindings",
-    "ls-sdk-bindings/bindings-react-native",
+    "bindings",
+    "bindings/bindings-react-native",
     "ls-sdk-core",
 ]
 resolver = "2"
