Rename ls-sdk-core workspace member

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -9,7 +9,7 @@ rpath = true
 members = [
     "bindings",
     "bindings/bindings-react-native",
-    "ls-sdk-core",
+    "core",
 ]
 resolver = "2"
 
