--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.0.1"
 [dependencies]
 anyhow = "1.0.80"
 bip39 = "2.0.0"
-breez-liquid-sdk = { path = "../lib/ls-sdk-core" }
+breez-liquid-sdk = { path = "../lib/core" }
 clap = { version = "4.5.1", features = ["derive"] }
 env_logger = "0.11"
 log = "0.4.20"
