--- a/lib/bindings/bindings-flutter/packages/breez_liquid/pubspec.yaml
+++ b/lib/bindings/bindings-flutter/packages/breez_liquid/pubspec.yaml
@@ -1,8 +1,8 @@
 name: breez_liquid
-description: Dart bindings to the Breez SDK Liquid library
+description: Dart bindings to the Breez Liquid SDK
 version: 0.1.0
 homepage: https://breez.technology
-repository: https://github.com/breez-sdk/breez-sdk-liquid
+repository: https://github.com/breez/breez-liquid-sdk
 
 platforms:
   macos:
