--- a/lib/bindings/bindings-flutter/packages/flutter_breez_liquid/pubspec.yaml
+++ b/lib/bindings/bindings-flutter/packages/flutter_breez_liquid/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_breez_liquid
-description: A new Flutter FFI plugin project.
+description: Flutter wrapper to Dart bindings of the Breez Liquid SDK
 version: 0.1.0
 homepage: https://breez.technology
 
