Wait for swift publishing job for flutter and RN

--- a/.github/workflows/publish-android.yml
+++ b/.github/workflows/publish-android.yml
@@ -37,6 +37,11 @@ jobs:
           repository: ${{ inputs.repository || github.repository }}
           ref: ${{ inputs.ref || github.sha }}
 
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
       - uses: actions/download-artifact@v3
         with:
           name: bindings-android-jniLibs
