--- a/.github/workflows/publish-all-platforms.yml
+++ b/.github/workflows/publish-all-platforms.yml
@@ -249,11 +249,26 @@ jobs:
       BREEZ_MVN_USERNAME: ${{ secrets.BREEZ_MVN_USERNAME }}
       BREEZ_MVN_PASSWORD: ${{ secrets.BREEZ_MVN_PASSWORD }}
   
-#  publish-flutter:
+#  publish-flutter-no-wait:
 #    needs:
 #      - setup
 #      - build-language-bindings
-#    if: ${{ needs.setup.outputs.flutter == 'true' }}
+#    if: ${{ needs.setup.outputs.swift != 'true' && needs.setup.outputs.flutter == 'true' }}
+#    uses: ./.github/workflows/publish-flutter.yml
+#    with:
+#      repository: ${{ needs.setup.outputs.repository }}
+#      ref: ${{ needs.setup.outputs.ref }}
+#      package-version: ${{ needs.setup.outputs.flutter-package-version }}
+#      publish: ${{ needs.setup.outputs.publish == 'true' }}
+#    secrets:
+#      REPO_SSH_KEY: ${{ secrets.REPO_SSH_KEY }}
+
+#  publish-flutter-wait:
+#    needs:
+#      - setup
+#      - build-language-bindings
+#      - publish-swift
+#    if: ${{ needs.setup.outputs.swift == 'true' && needs.setup.outputs.flutter == 'true' }}
 #    uses: ./.github/workflows/publish-flutter.yml
 #    with:
 #      repository: ${{ needs.setup.outputs.repository }}
@@ -265,10 +280,26 @@ jobs:
 
   # react native version x.y.z will at runtime require
   # ios and android packages x.y.z being published already.
-  publish-react-native:
+  publish-react-native-no-wait:
     needs:
       - setup
-    if: ${{ needs.setup.outputs.react-native == 'true' }}
+    if: ${{ needs.setup.outputs.swift != 'true' && needs.setup.outputs.react-native == 'true' }}
+    uses: ./.github/workflows/publish-react-native.yml
+    with:
+      repository: ${{ needs.setup.outputs.repository }}
+      ref: ${{ needs.setup.outputs.ref }}
+      package-version: ${{ needs.setup.outputs.react-native-package-version }}
+      publish: ${{ needs.setup.outputs.publish == 'true' }}
+    secrets:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  # react native version x.y.z will at runtime require
+  # ios and android packages x.y.z being published already.
+  publish-react-native-wait:
+    needs:
+      - setup
+      - publish-swift
+    if: ${{ needs.setup.outputs.swift == 'true' && needs.setup.outputs.react-native == 'true' }}
     uses: ./.github/workflows/publish-react-native.yml
     with:
       repository: ${{ needs.setup.outputs.repository }}
