--- a/lib/bindings/bindings-flutter/justfile
+++ b/lib/bindings/bindings-flutter/justfile
@@ -3,6 +3,14 @@ frb_bin := "flutter_rust_bridge_codegen generate"
 
 export CARGO_TERM_COLOR := "always"
 
+# Install flutter_rust_bridge_codegen dependencies
+frb:
+	cargo install cargo-expand
+	cargo install flutter_rust_bridge_codegen --version 2.0.0-dev.32
+	dart pub global activate ffigen
+	dart pub global activate ffi
+	cargo install cargo-xcode
+
 # generate bindings
 gen: codegen && ffigen
 
