Ignore symlink files for C headers
Remove symlink files from version control

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 **/.dart_tool
 # fenv
 **/.flutter-version
+# symlink headers
+packages/flutter/ios/Classes/breez_liquid_sdk.h
+packages/flutter/macos/Classes/breez_liquid_sdk.h
 # Miscellaneous
 .DS_Store
 .idea/
