Update flutter_rust_bridge to 2.0.0-dev.33
Update dependencies to latest & increase the supported range

--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -4,21 +4,21 @@ version: 0.1.0
 homepage: https://breez.technology
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
-  flutter: ">=2.11.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
   breez_liquid: ^0.1.0
-  ffigen: ^11.0.0
+  ffigen: ">=8.0.0 <=11.0.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
