--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -15,14 +15,14 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dev_dependencies:
-  build_runner: ^2.3.3
-  ffigen: ">=8.0.0 <10.0.0"
-  freezed: ^2.3.2
+  build_runner: ^2.4.9
+  ffigen: ">=8.0.0 <=11.0.0"
+  freezed: ^2.5.2
   lints: ">=2.0.0 <4.0.0"
-  path: ^1.8.3
-  test: ^1.16.0
+  path: ^1.9.0
+  test: ^1.25.4
 dependencies:
-  ffi: ^2.0.1
-  flutter_rust_bridge: 2.0.0-dev.32
-  freezed_annotation: ^2.2.0
-  meta: ^1.8.0
+  ffi: ^2.1.2
+  flutter_rust_bridge: ">=2.0.0-dev.0 <=2.0.0-dev.33"
+  freezed_annotation: ^2.4.1
+  meta: ^1.11.0
