Install Melos as global package as part of `just init`
Update README accordingly
 - Remove Melos from prerequisites

--- a/lib/bindings/bindings-flutter/justfile
+++ b/lib/bindings/bindings-flutter/justfile
@@ -75,6 +75,7 @@ link:
 
 # (melos) use instead of flutter pub get
 init *args:
+	dart pub global activate melos
 	melos bootstrap {{args}}
 
 # (melos) Generate docs for packages in workspace
