--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -10,7 +10,8 @@ crate-type = ["lib", "cdylib", "staticlib"]
 [dependencies]
 anyhow = { workspace = true }
 bip39 = { version = "2.0.0", features = ["serde"] }
-boltz-client = { git = "https://github.com/hydra-yse/boltz-rust", rev = "410d3a95e528fce36c02e8d414d5b647a31cc28f" }
+#boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "6f45fff8b87c7530c847eb05f018906c48785a6c" }
+boltz-client = { git = "https://github.com/hydra-yse/boltz-rust", rev = "50b93fb7eba043e12a71fd7ddb1e9604a946c21b" }
 flutter_rust_bridge = { version = "=2.0.0-dev.33", features = ["chrono"], optional = true }
 log = "0.4.20"
 lwk_common = "0.3.0"
@@ -19,12 +20,12 @@ lwk_wollet = "0.3.0"
 rusqlite = { version = "0.31", features = ["backup", "bundled"] }
 rusqlite_migration = "1.0"
 serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.116"
 thiserror = { workspace = true }
+tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
 openssl = { version = "0.10", features = ["vendored"] }
 # TODO Remove once fully migrated to v2 API
 elements = "0.24.1"
-serde_json = "1.0.116"
-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
 
 [dev-dependencies]
 tempdir = "0.3.7"
