--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -10,8 +10,16 @@ crate-type = ["lib", "cdylib", "staticlib"]
 [dependencies]
 anyhow = { workspace = true }
 bip39 = { version = "2.0.0", features = ["serde"] }
-#boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "6f45fff8b87c7530c847eb05f018906c48785a6c" }
-boltz-client = { git = "https://github.com/hydra-yse/boltz-rust", rev = "88a2f30a431952ba1ed94a4a054a5ebbd321320a" }
+
+#boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "a05731cc33030ada9ae14afcafe0cded22842ba6" }
+#boltz-client = { git = "https://github.com/hydra-yse/boltz-rust", rev = "b632238935ad5f5b60435a7fc494ded2f232cf12" }
+
+# Combination of
+# - latest fixes from Boltz (fallback for get_utxos) needed for claiming as soon as lockup tx is seen in mempool (receive case)
+# - latest fixes from Antonio (get reverse swap pairs, necessary structs, etc)
+# https://github.com/ok300/boltz-rust/commits/ok300-combo-boltz-fallback-get-utxos-yse-get-submarine-pairs/
+boltz-client = { git = "https://github.com/ok300/boltz-rust", rev = "0ec36d8af79db0b4e28aaeed6a66c18db9205c49" }
+
 flutter_rust_bridge = { version = "=2.0.0-dev.33", features = ["chrono"], optional = true }
 log = "0.4.20"
 lwk_common = "0.3.0"
