--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -15,14 +15,14 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dev_dependencies:
-  build_runner: ^2.4.9
+  build_runner: ^2.4.10
   ffigen: ">=8.0.0 <=11.0.0"
-  freezed: ^2.5.2
+  freezed: ^2.5.3
   lints: ">=2.0.0 <4.0.0"
   path: ^1.9.0
-  test: ^1.25.4
+  test: ^1.25.5
 dependencies:
   ffi: ^2.1.2
   flutter_rust_bridge: 2.0.0-dev.33
   freezed_annotation: ^2.4.1
-  meta: ^1.11.0
+  meta: ^1.12.0 # meta is pinned to version 1.12.0 by integration_test from the flutter SDK.
